// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<select
  onChange={[Function]}
  value="__NOVALUE__"
>
  <option
    value="__NOVALUE__"
  >
    
  </option>
  <option
    value="a"
  >
    A
  </option>
  <option
    value="b"
  >
    B
  </option>
</select>
`;

exports[`renders 2`] = `
<select
  onChange={[Function]}
  value="a"
>
  <option
    value="a"
  >
    A
  </option>
  <option
    value="b"
  >
    B
  </option>
</select>
`;

exports[`renders 3`] = `
<select
  onChange={[Function]}
  value="a"
>
  <option
    value="__NOVALUE__"
  >
    
  </option>
  <option
    value="a"
  >
    A
  </option>
  <option
    value="b"
  >
    B
  </option>
</select>
`;
